# sfml_playground

./: .gitignore  CMakeLists.txt  readme
experiments/: CMakeLists.txt  exp_matrix  exp_matrix.cpp
experiments/exp_matrix.dSYM/Contents/: Info.plist
experiments/exp_matrix.dSYM/Contents/Resources/DWARF/: exp_matrix
ong/: CMakeLists.txt  ball.hpp  conf.ini  event.hpp  game_screen.hpp  header.hpp  load_screen.hpp  main.cpp  menu_screen.hpp  player.hpp
ong/header/: ball.hpp  components.hpp  game_screen.hpp  game_screen.old.hpp  header.hpp  load_screen.hpp  menu_screen.hpp  player.hpp  system.hpp
ong/source/: components.cpp  main.cpp  system.cpp
pong/: CMakeLists.txt  ball.hpp  game_screen.hpp  main.cpp  menu_screen.hpp  pause_screen.hpp  player.hpp
pong/src/: ball.hpp  main.cpp  math.hpp  player.hpp  pong.hpp  vec2.hpp
resource_bundler/: main.cpp
tools/: CMakeLists.txt  main.cpp
tortuga/: CMakeLists.txt  readme
tortuga-core/: CMakeLists.txt  CTestTestfile.cmake
tortuga-core/inc/TE/: Collider.hpp  GameApp.hpp  InputService.hpp  WindowService.hpp  common.hpp  hash.hpp  log_utils.hpp  logger.hpp  managers.hpp  memory.hpp  profiler.hpp  service_locator.hpp
tortuga-core/inc/TE/core/: IEventHandler.hpp  IRenderable.hpp  IUpdatable.hpp  ServiceLocator.hpp  core.hpp  origin.hpp  stringId.hpp
tortuga-core/inc/TE/ecs/: EventManager.hpp  base.hpp  component.hpp  ecs.hpp  entity.hpp  observer.hpp  system.hpp  systemManager.hpp
tortuga-core/inc/TE/input/: InputService.hpp  inputs.hpp
tortuga-core/inc/TE/math/: math.hpp  plane.hpp  rect.hpp  vec2.hpp  vec3.hpp
tortuga-core/inc/TE/message/: message.hpp  message_service.hpp  subscription.hpp
tortuga-core/inc/TE/physics/: force.hpp  particule.hpp  physics.hpp
tortuga-core/inc/TE/resource/: resource_info.hpp  resource_service.hpp
tortuga-core/inc/TE/screen/: Screen.hpp  ScreenService.hpp  screen.hpp  screen_manager.hpp  screen_service.hpp
tortuga-core/inc/TE/screen/ui/: UIScreen.hpp
tortuga-core/inc/TE/screen/ui/element/: UIElement.hpp
tortuga-core/inc/TE/services/: configuration.hpp  service.hpp
tortuga-core/src/: GameApp.cpp  logger.cpp  managers.cpp  memory.cpp  profiler.cpp  service_locator.cpp
tortuga-core/src/core/: ServiceLocator.cpp  core.cpp  stringId.cpp
tortuga-core/src/ecs/: EventManager.cpp  base.cpp  component.cpp  entity.cpp  observer.cpp  system.cpp  systemManager.cpp
tortuga-core/src/input/: InputService.cpp
tortuga-core/src/math/: math.cpp
tortuga-core/src/message/: message.cpp  message_service.cpp  subscription.cpp
tortuga-core/src/physics/: force.cpp  particule.cpp
tortuga-core/src/resource/: resource_service.cpp
tortuga-core/src/screen/: Screen.cpp  ScreenService.cpp  screen.cpp  screen_manager.cpp  screen_service.cpp
tortuga-core/src/screen/ui/: UIScreen.cpp
tortuga-core/src/services/: configuration.cpp
tortuga-core/test/: test.cpp
tortuga/core/: CMakeLists.txt
tortuga/core/include/tortuga/: clock.hpp  configuration.hpp  core.hpp  hash.hpp  log_utils.hpp  memory.hpp  service.hpp  stringId.hpp  types.hpp
tortuga/core/include/tortuga/math/: math.hpp  matrix.hpp  plane.hpp  rect.hpp  vector.hpp
tortuga/core/src/: clock.cpp  configuration.cpp  core.cpp  memory.cpp  stringId.cpp
tortuga/core/src/math/: math.cpp
tortuga/core/test/: hash.t.cpp  main.cpp  math.t.cpp  matrix.t.cpp  vector.t.cpp
tortuga/engine/: CMakeLists.txt
tortuga/engine/include/tortuga/: Screen.hpp
tortuga/engine/src/: Screen.cpp
tortuga/modules/collision/: CMakeLists.txt
tortuga/modules/ecs/: CMakeLists.txt
tortuga/modules/physic/: CMakeLists.txt
tortuga/resource_bundler/: CMakeLists.txt  main.hpp
utils/: CMakeLists.txt  math.hpp  screen.cpp  screen.hpp  screen_manager.cpp  screen_manager.hpp
utils/math/: mat3.cpp  mat3.hpp  math.cpp  math.hpp  vec2.cpp  vec2.hpp  vec3.hpp  vector  vector.hpp
utils/screen/: screen.cpp  screen.hpp  screen_manager.cpp  screen_manager.hpp
